--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,8 +1,8 @@
 auxiliary.org-netbeans-modules-projectapi.issue214819_5f_fx_5f_enabled=true
 # No need to modify this property unless customizing JavaFX Ant task infrastructure
 endorsed.javafx.ant.classpath=.
-file.reference.mysql-connector-java-5.1.13-bin.jar=C:\\Users\\angel\\OneDrive\\Escritorio\\Sistema\\SistemaParaLasPracticasProfesionalesJavaFX\\mysql-connector-java-5.1.13-bin.jar
-file.reference.ojdbc6-11.jar=C:\\Users\\angel\\OneDrive\\Escritorio\\Sistema\\SistemaParaLasPracticasProfesionalesJavaFX\\ojdbc6-11.jar
+file.reference.mysql-connector-java-5.1.13-bin.jar=C:\\Users\\dagam\\Desktop\\Sistema-para-las-Pr-cticas-Profesionales-master\\mysql-connector-java-5.1.13-bin.jar
+file.reference.ojdbc6-11.jar=C:\\Users\\dagam\\Desktop\\Sistema-para-las-Pr-cticas-Profesionales-master\\ojdbc6-11.jar
 javafx.run.inbrowser=<Default System Browser>
 javafx.run.inbrowser.path=C:\\Program Files\\Internet Explorer\\iexplore.exe
-user.properties.file=C:\\Users\\angel\\AppData\\Roaming\\NetBeans\\11.3\\build.properties
+user.properties.file=C:\\Users\\dagam\\AppData\\Roaming\\NetBeans\\11.3\\build.properties
